@@ -553,6 +553,140 @@ expr_stmt|;
 block|}
 block|}
 empty_stmt|;
+comment|/**    * The IndexingChain must define the {@link #getChain(DocumentsWriter)} method    * which returns the DocConsumer that the DocumentsWriter calls to process the    * documents.     */
+DECL|class|IndexingChain
+specifier|abstract
+specifier|static
+class|class
+name|IndexingChain
+block|{
+DECL|method|getChain
+specifier|abstract
+name|DocConsumer
+name|getChain
+parameter_list|(
+name|DocumentsWriter
+name|documentsWriter
+parameter_list|)
+function_decl|;
+block|}
+DECL|field|DefaultIndexingChain
+specifier|static
+specifier|final
+name|IndexingChain
+name|DefaultIndexingChain
+init|=
+operator|new
+name|IndexingChain
+argument_list|()
+block|{
+name|DocConsumer
+name|getChain
+parameter_list|(
+name|DocumentsWriter
+name|documentsWriter
+parameter_list|)
+block|{
+comment|/*       This is the current indexing chain:        DocConsumer / DocConsumerPerThread         --> code: DocFieldProcessor / DocFieldProcessorPerThread           --> DocFieldConsumer / DocFieldConsumerPerThread / DocFieldConsumerPerField             --> code: DocFieldConsumers / DocFieldConsumersPerThread / DocFieldConsumersPerField               --> code: DocInverter / DocInverterPerThread / DocInverterPerField                 --> InvertedDocConsumer / InvertedDocConsumerPerThread / InvertedDocConsumerPerField                   --> code: TermsHash / TermsHashPerThread / TermsHashPerField                     --> TermsHashConsumer / TermsHashConsumerPerThread / TermsHashConsumerPerField                       --> code: FreqProxTermsWriter / FreqProxTermsWriterPerThread / FreqProxTermsWriterPerField                       --> code: TermVectorsTermsWriter / TermVectorsTermsWriterPerThread / TermVectorsTermsWriterPerField                 --> InvertedDocEndConsumer / InvertedDocConsumerPerThread / InvertedDocConsumerPerField                   --> code: NormsWriter / NormsWriterPerThread / NormsWriterPerField               --> code: StoredFieldsWriter / StoredFieldsWriterPerThread / StoredFieldsWriterPerField     */
+comment|// Build up indexing chain:
+specifier|final
+name|TermsHashConsumer
+name|termVectorsWriter
+init|=
+operator|new
+name|TermVectorsTermsWriter
+argument_list|(
+name|documentsWriter
+argument_list|)
+decl_stmt|;
+specifier|final
+name|TermsHashConsumer
+name|freqProxWriter
+init|=
+operator|new
+name|FreqProxTermsWriter
+argument_list|()
+decl_stmt|;
+specifier|final
+name|InvertedDocConsumer
+name|termsHash
+init|=
+operator|new
+name|TermsHash
+argument_list|(
+name|documentsWriter
+argument_list|,
+literal|true
+argument_list|,
+name|freqProxWriter
+argument_list|,
+operator|new
+name|TermsHash
+argument_list|(
+name|documentsWriter
+argument_list|,
+literal|false
+argument_list|,
+name|termVectorsWriter
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|NormsWriter
+name|normsWriter
+init|=
+operator|new
+name|NormsWriter
+argument_list|()
+decl_stmt|;
+specifier|final
+name|DocInverter
+name|docInverter
+init|=
+operator|new
+name|DocInverter
+argument_list|(
+name|termsHash
+argument_list|,
+name|normsWriter
+argument_list|)
+decl_stmt|;
+specifier|final
+name|StoredFieldsWriter
+name|fieldsWriter
+init|=
+operator|new
+name|StoredFieldsWriter
+argument_list|(
+name|documentsWriter
+argument_list|)
+decl_stmt|;
+specifier|final
+name|DocFieldConsumers
+name|docFieldConsumers
+init|=
+operator|new
+name|DocFieldConsumers
+argument_list|(
+name|docInverter
+argument_list|,
+name|fieldsWriter
+argument_list|)
+decl_stmt|;
+return|return
+operator|new
+name|DocFieldProcessor
+argument_list|(
+name|documentsWriter
+argument_list|,
+name|docFieldConsumers
+argument_list|)
+return|;
+block|}
+block|}
+decl_stmt|;
 DECL|field|consumer
 specifier|final
 name|DocConsumer
@@ -749,6 +883,9 @@ name|directory
 parameter_list|,
 name|IndexWriter
 name|writer
+parameter_list|,
+name|IndexingChain
+name|indexingChain
 parameter_list|)
 throws|throws
 name|IOException
@@ -781,107 +918,30 @@ operator|.
 name|maxDoc
 argument_list|()
 expr_stmt|;
-comment|/*       This is the current indexing chain:        DocConsumer / DocConsumerPerThread         --> code: DocFieldProcessor / DocFieldProcessorPerThread           --> DocFieldConsumer / DocFieldConsumerPerThread / DocFieldConsumerPerField             --> code: DocFieldConsumers / DocFieldConsumersPerThread / DocFieldConsumersPerField               --> code: DocInverter / DocInverterPerThread / DocInverterPerField                 --> InvertedDocConsumer / InvertedDocConsumerPerThread / InvertedDocConsumerPerField                   --> code: TermsHash / TermsHashPerThread / TermsHashPerField                     --> TermsHashConsumer / TermsHashConsumerPerThread / TermsHashConsumerPerField                       --> code: FreqProxTermsWriter / FreqProxTermsWriterPerThread / FreqProxTermsWriterPerField                       --> code: TermVectorsTermsWriter / TermVectorsTermsWriterPerThread / TermVectorsTermsWriterPerField                 --> InvertedDocEndConsumer / InvertedDocConsumerPerThread / InvertedDocConsumerPerField                   --> code: NormsWriter / NormsWriterPerThread / NormsWriterPerField               --> code: StoredFieldsWriter / StoredFieldsWriterPerThread / StoredFieldsWriterPerField     */
-comment|// TODO FI: this should be something the user can pass in
-comment|// Build up indexing chain:
-specifier|final
-name|TermsHashConsumer
-name|termVectorsWriter
-init|=
-operator|new
-name|TermVectorsTermsWriter
-argument_list|(
-name|this
-argument_list|)
-decl_stmt|;
-specifier|final
-name|TermsHashConsumer
-name|freqProxWriter
-init|=
-operator|new
-name|FreqProxTermsWriter
-argument_list|()
-decl_stmt|;
-specifier|final
-name|InvertedDocConsumer
-name|termsHash
-init|=
-operator|new
-name|TermsHash
-argument_list|(
-name|this
-argument_list|,
-literal|true
-argument_list|,
-name|freqProxWriter
-argument_list|,
-operator|new
-name|TermsHash
-argument_list|(
-name|this
-argument_list|,
-literal|false
-argument_list|,
-name|termVectorsWriter
-argument_list|,
-literal|null
-argument_list|)
-argument_list|)
-decl_stmt|;
-specifier|final
-name|NormsWriter
-name|normsWriter
-init|=
-operator|new
-name|NormsWriter
-argument_list|()
-decl_stmt|;
-specifier|final
-name|DocInverter
-name|docInverter
-init|=
-operator|new
-name|DocInverter
-argument_list|(
-name|termsHash
-argument_list|,
-name|normsWriter
-argument_list|)
-decl_stmt|;
-specifier|final
-name|StoredFieldsWriter
-name|fieldsWriter
-init|=
-operator|new
-name|StoredFieldsWriter
-argument_list|(
-name|this
-argument_list|)
-decl_stmt|;
-specifier|final
-name|DocFieldConsumers
-name|docFieldConsumers
-init|=
-operator|new
-name|DocFieldConsumers
-argument_list|(
-name|docInverter
-argument_list|,
-name|fieldsWriter
-argument_list|)
-decl_stmt|;
 name|consumer
 operator|=
-name|docFieldProcessor
-operator|=
-operator|new
-name|DocFieldProcessor
+name|indexingChain
+operator|.
+name|getChain
 argument_list|(
 name|this
-argument_list|,
-name|docFieldConsumers
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|consumer
+operator|instanceof
+name|DocFieldProcessor
+condition|)
+block|{
+name|docFieldProcessor
+operator|=
+operator|(
+name|DocFieldProcessor
+operator|)
+name|consumer
+expr_stmt|;
+block|}
 block|}
 comment|/** Returns true if any of the fields in the current    *  buffered docs have omitTf==false */
 DECL|method|hasProx
@@ -890,12 +950,20 @@ name|hasProx
 parameter_list|()
 block|{
 return|return
+operator|(
+name|docFieldProcessor
+operator|!=
+literal|null
+operator|)
+condition|?
 name|docFieldProcessor
 operator|.
 name|fieldInfos
 operator|.
 name|hasProx
 argument_list|()
+else|:
+literal|true
 return|;
 block|}
 comment|/** If non-null, various details of indexing are printed    *  here. */
