@@ -52,6 +52,22 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|DocumentsWriter
+operator|.
+name|IndexingChain
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|Similarity
@@ -1843,6 +1859,58 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Expert: constructs an IndexWriter with a custom {@link    * IndexDeletionPolicy} and {@link IndexingChain},     * for the index in<code>d</code>.    * Text will be analyzed with<code>a</code>.  If    *<code>create</code> is true, then a new, empty index    * will be created in<code>d</code>, replacing the index    * already there, if any.    *    *<p><b>NOTE</b>: autoCommit (see<a    * href="#autoCommit">above</a>) is set to false with this    * constructor.    *    * @param d the index directory    * @param a the analyzer to use    * @param create<code>true</code> to create the index or overwrite    *  the existing one;<code>false</code> to append to the existing    *  index    * @param deletionPolicy see<a href="#deletionPolicy">above</a>    * @param indexingChain the {@link DocConsumer} chain to be used to     *  process documents    * @param mfl whether or not to limit field lengths    * @throws CorruptIndexException if the index is corrupt    * @throws LockObtainFailedException if another writer    *  has this index open (<code>write.lock</code> could not    *  be obtained)    * @throws IOException if the directory cannot be read/written to, or    *  if it does not exist and<code>create</code> is    *<code>false</code> or if there is any other low-level    *  IO error    */
+DECL|method|IndexWriter
+name|IndexWriter
+parameter_list|(
+name|Directory
+name|d
+parameter_list|,
+name|Analyzer
+name|a
+parameter_list|,
+name|boolean
+name|create
+parameter_list|,
+name|IndexDeletionPolicy
+name|deletionPolicy
+parameter_list|,
+name|MaxFieldLength
+name|mfl
+parameter_list|,
+name|IndexingChain
+name|indexingChain
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|LockObtainFailedException
+throws|,
+name|IOException
+block|{
+name|init
+argument_list|(
+name|d
+argument_list|,
+name|a
+argument_list|,
+name|create
+argument_list|,
+literal|false
+argument_list|,
+name|deletionPolicy
+argument_list|,
+literal|false
+argument_list|,
+name|mfl
+operator|.
+name|getLimit
+argument_list|()
+argument_list|,
+name|indexingChain
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Expert: constructs an IndexWriter with a custom {@link    * IndexDeletionPolicy}, for the index in<code>d</code>.    * Text will be analyzed with<code>a</code>.  If    *<code>create</code> is true, then a new, empty index    * will be created in<code>d</code>, replacing the index    * already there, if any.    *    * @param d the index directory    * @param autoCommit see<a href="#autoCommit">above</a>    * @param a the analyzer to use    * @param create<code>true</code> to create the index or overwrite    *  the existing one;<code>false</code> to append to the existing    *  index    * @param deletionPolicy see<a href="#deletionPolicy">above</a>    * @throws CorruptIndexException if the index is corrupt    * @throws LockObtainFailedException if another writer    *  has this index open (<code>write.lock</code> could not    *  be obtained)    * @throws IOException if the directory cannot be read/written to, or    *  if it does not exist and<code>create</code> is    *<code>false</code> or if there is any other low-level    *  IO error    * @deprecated This constructor will be removed in the 3.0 release.    *  Use {@link    *  #IndexWriter(Directory,Analyzer,boolean,IndexDeletionPolicy,MaxFieldLength)}    *  instead, and call {@link #commit()} when needed.    */
 DECL|method|IndexWriter
 specifier|public
@@ -1918,6 +1986,59 @@ name|LockObtainFailedException
 throws|,
 name|IOException
 block|{
+name|init
+argument_list|(
+name|d
+argument_list|,
+name|a
+argument_list|,
+name|closeDir
+argument_list|,
+name|deletionPolicy
+argument_list|,
+name|autoCommit
+argument_list|,
+name|maxFieldLength
+argument_list|,
+name|DocumentsWriter
+operator|.
+name|DefaultIndexingChain
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|init
+specifier|private
+name|void
+name|init
+parameter_list|(
+name|Directory
+name|d
+parameter_list|,
+name|Analyzer
+name|a
+parameter_list|,
+name|boolean
+name|closeDir
+parameter_list|,
+name|IndexDeletionPolicy
+name|deletionPolicy
+parameter_list|,
+name|boolean
+name|autoCommit
+parameter_list|,
+name|int
+name|maxFieldLength
+parameter_list|,
+name|IndexingChain
+name|indexingChain
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|LockObtainFailedException
+throws|,
+name|IOException
+block|{
 if|if
 condition|(
 name|IndexReader
@@ -1943,6 +2064,8 @@ argument_list|,
 name|autoCommit
 argument_list|,
 name|maxFieldLength
+argument_list|,
+name|indexingChain
 argument_list|)
 expr_stmt|;
 block|}
@@ -1963,6 +2086,8 @@ argument_list|,
 name|autoCommit
 argument_list|,
 name|maxFieldLength
+argument_list|,
+name|indexingChain
 argument_list|)
 expr_stmt|;
 block|}
@@ -1993,6 +2118,65 @@ name|autoCommit
 parameter_list|,
 name|int
 name|maxFieldLength
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|LockObtainFailedException
+throws|,
+name|IOException
+block|{
+name|init
+argument_list|(
+name|d
+argument_list|,
+name|a
+argument_list|,
+name|create
+argument_list|,
+name|closeDir
+argument_list|,
+name|deletionPolicy
+argument_list|,
+name|autoCommit
+argument_list|,
+name|maxFieldLength
+argument_list|,
+name|DocumentsWriter
+operator|.
+name|DefaultIndexingChain
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|init
+specifier|private
+name|void
+name|init
+parameter_list|(
+name|Directory
+name|d
+parameter_list|,
+name|Analyzer
+name|a
+parameter_list|,
+specifier|final
+name|boolean
+name|create
+parameter_list|,
+name|boolean
+name|closeDir
+parameter_list|,
+name|IndexDeletionPolicy
+name|deletionPolicy
+parameter_list|,
+name|boolean
+name|autoCommit
+parameter_list|,
+name|int
+name|maxFieldLength
+parameter_list|,
+name|IndexingChain
+name|indexingChain
 parameter_list|)
 throws|throws
 name|CorruptIndexException
@@ -2217,6 +2401,8 @@ argument_list|(
 name|directory
 argument_list|,
 name|this
+argument_list|,
+name|indexingChain
 argument_list|)
 expr_stmt|;
 name|docWriter
